Java 8, you betrayed me! new beta ;-;