@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.List;
 
 import io.github.fablabsmc.fablabs.api.fiber.v1.annotation.AnnotatedSettings;
 import io.github.fablabsmc.fablabs.api.fiber.v1.annotation.SettingNamingConvention;
@@ -45,10 +46,13 @@ public class OkZoomerConfig {
 		if (Files.exists(ALPHA_CONFIG_PATH)) {
 			try {
 				ZoomUtils.modLogger.info("[Ok Zoomer] A config file from the 4.0.0 alphas was found! It will be converted to the new format then used.");
-				String content = Files.readString(ALPHA_CONFIG_PATH, Charset.defaultCharset());
-				content.replace("\"technical\": {", "\"tweaks\": {");
-				content.replace("\"hijack_save_toolbar_activator_key\": ", "\"unbind_conflicting_key\": ");
-				Files.writeString(CONFIG_PATH, content, Charset.defaultCharset());
+				List<String> list = List.of();
+				Files.readAllLines(ALPHA_CONFIG_PATH).forEach(string -> {
+					string.replace("\"technical\": {", "\"tweaks\": {");
+					string.replace("\"hijack_save_toolbar_activator_key\": ", "\"unbind_conflicting_key\": ");
+					list.add(string);
+				});
+				Files.write(CONFIG_PATH, list, Charset.defaultCharset());
 				Files.delete(ALPHA_CONFIG_PATH);
 			} catch (IOException e) {
 				e.printStackTrace();
@@ -57,21 +61,28 @@ public class OkZoomerConfig {
 		if (Files.exists(CONFIG_PATH)) {
 			try {
 				//If the legacy config file is detected, translate it to the new format.
-				if (Files.readString(CONFIG_PATH).contains("\"hideHands\":")) {
-					ZoomUtils.modLogger.info("[Ok Zoomer] A pre-4.0.0 config file was found! It will be converted to the new format then used.");
-					LEGACY_ANNOTATED_SETTINGS.applyToNode(LEGACY_TREE, LEGACY_POJO);
-					FiberSerialization.deserialize(TREE, Files.newInputStream(CONFIG_PATH), serializer);
-					OkZoomerConfigPojo.values.zoomDivisor = OkZoomerLegacyConfigPojo.zoomDivisor;
-					OkZoomerConfigPojo.values.minimumZoomDivisor = OkZoomerLegacyConfigPojo.minimumZoomDivisor;
-					OkZoomerConfigPojo.values.maximumZoomDivisor = OkZoomerLegacyConfigPojo.maximumZoomDivisor;
-					OkZoomerConfigPojo.features.cinematicCamera = OkZoomerLegacyConfigPojo.smoothCamera ? CinematicCameraOptions.VANILLA : CinematicCameraOptions.OFF;
-					OkZoomerConfigPojo.features.reduceSensitivity = OkZoomerLegacyConfigPojo.reduceSensitivity;
-					OkZoomerConfigPojo.features.zoomTransition = OkZoomerLegacyConfigPojo.smoothTransition ? ZoomTransitionOptions.SMOOTH : ZoomTransitionOptions.OFF;
-					OkZoomerConfigPojo.features.zoomMode = OkZoomerLegacyConfigPojo.zoomToggle ? ZoomModes.TOGGLE : ZoomModes.HOLD;
-					OkZoomerConfigPojo.features.zoomScrolling = OkZoomerLegacyConfigPojo.zoomScrolling;
-					OkZoomerConfigPojo.features.extraKeybinds = OkZoomerLegacyConfigPojo.zoomScrolling;
-					saveModConfig();
-				}
+				Files.readAllLines(CONFIG_PATH).forEach(string -> {
+					if (string.contains("\"hideHands\":")) {
+						try {
+							ZoomUtils.modLogger.info("[Ok Zoomer] A pre-4.0.0 config file was found! It will be converted to the new format then used.");
+							LEGACY_ANNOTATED_SETTINGS.applyToNode(LEGACY_TREE, LEGACY_POJO);
+							FiberSerialization.deserialize(TREE, Files.newInputStream(CONFIG_PATH), serializer);
+							OkZoomerConfigPojo.values.zoomDivisor = OkZoomerLegacyConfigPojo.zoomDivisor;
+							OkZoomerConfigPojo.values.minimumZoomDivisor = OkZoomerLegacyConfigPojo.minimumZoomDivisor;
+							OkZoomerConfigPojo.values.maximumZoomDivisor = OkZoomerLegacyConfigPojo.maximumZoomDivisor;
+							OkZoomerConfigPojo.features.cinematicCamera = OkZoomerLegacyConfigPojo.smoothCamera ? CinematicCameraOptions.VANILLA : CinematicCameraOptions.OFF;
+							OkZoomerConfigPojo.features.reduceSensitivity = OkZoomerLegacyConfigPojo.reduceSensitivity;
+							OkZoomerConfigPojo.features.zoomTransition = OkZoomerLegacyConfigPojo.smoothTransition ? ZoomTransitionOptions.SMOOTH : ZoomTransitionOptions.OFF;
+							OkZoomerConfigPojo.features.zoomMode = OkZoomerLegacyConfigPojo.zoomToggle ? ZoomModes.TOGGLE : ZoomModes.HOLD;
+							OkZoomerConfigPojo.features.zoomScrolling = OkZoomerLegacyConfigPojo.zoomScrolling;
+							OkZoomerConfigPojo.features.extraKeybinds = OkZoomerLegacyConfigPojo.zoomScrolling;
+							saveModConfig();
+						} catch (IOException | FiberException e) {
+							e.printStackTrace();
+						}
+						return;
+					}
+				});
 				ANNOTATED_SETTINGS.applyToNode(TREE, POJO);
 				FiberSerialization.deserialize(TREE, Files.newInputStream(CONFIG_PATH), serializer);
 				isConfigLoaded = true;
